rpc: initial cef client implementation